# cpp-static-tools

./: Dockerfile
test/: CMakeLists.txt
